--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
   "main": "index.js",
   "devDependencies": {
     "file-loader": "^6.2.0",
-    "node-sass": "^7.0.3"
+    "node-sass": "^7.0.3",
+    "@babel/core": "7.22.5",
+    "@babel/eslint-parser": "7.22.5",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@babel/preset-env": "7.22.5"
   },
   "author": "Bekzod",
   "license": "ISC"
