--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "devDependencies": {
-    "file-loader": "^6.2.0",
-    "node-sass": "^7.0.3",
     "@babel/core": "7.22.5",
     "@babel/eslint-parser": "7.22.5",
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "@babel/preset-env": "7.22.5"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "7.22.5",
+    "file-loader": "^6.2.0",
+    "node-sass": "^7.0.3"
   },
   "author": "Bekzod",
   "license": "ISC"
