--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.14.2",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,7 +46,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "7.22.5",
     "file-loader": "^6.2.0",
-    "node-sass": "^7.0.3"
+    "node-sass": "^9.0.0"
   },
   "author": "Bekzod",
   "license": "ISC"
